$Id$

2016-04-16  Christian Franke  <franke@computer.org>

	atacmds.cpp: Remove duplicate POWER MODE error message.

	smartd.cpp: Remove dead increment (cppcheck: unreadVariable).
	Do not write localized decimal point to syslog().

	configure.ac, Makefile.am: Add '--with-update-smart-drivedb=no'
	option to disable drive database update script.  Useful if
	maintainers do not want the script due to security concerns
	and/or want to provide database updates as a separate package
	(Debian bug 804299, FreeBSD Bugzilla 208398).
	smartctl.8.in, smartd.8.in: Hide references to script if disabled.

	nvmeprint.cpp: Add Power State and Namespace info to '-i' output.
	Do not print unset or duplicate info unless debug mode is enabled.
	nvmecmds.cpp, nvmecmds.h: Add Identify Namespace support.

2016-04-15  Christian Franke  <franke@computer.org>

	os_linux.cpp: Fix harmless bug in errno check of HPTIO_CTL ioctl()
	calls.  Bug was introduced 10 years ago in r2237.

2016-04-15  Yuriy M. Kaminskiy  <yumkam@gmail.com>

	os_linux.cpp: Fix harmless bug in errno check of HDIO_DRIVE_TASK*
	ioctl() calls.  Bug was introduced 12 years ago in r1609, the fix
	in r4003 was incomplete.

2016-04-14  Christian Franke  <franke@computer.org>

	nvmeprint.cpp: Fix size factor of Data Units Read/Written counters.
	os_win32.cpp: Fix device count in win_nvme_device::open().

	Thanks to Oliver Bruchmann for bug reports and testing.

2016-04-12  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: improve handling when no tape cartridge is
	in the tape drive.

2016-04-12  Alex Samorukov  <samm@os2.kiev.ua>

	scsiprint.cpp, smartd.cpp: workaround for the buggy ST8000NM0075/E001,
	request log page list with a fixed length (ticket #678).

2016-04-11  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: add Samsung SM863 series, ticket #681

2016-04-10  Christian Franke  <franke@computer.org>

	os_win32.cpp: Include also unknown and unsupported USB devices